# AgentMarket

./: .gitignore  Anchor.toml  Cargo.toml  README.md  demo.sh  presentation.html  session_yc.md  yc_coding_session.md  yc_session.md
agentmarket-agent/: .env.example  agent.py  job_spec.py  requirements.txt  router.py  test_audit.py
agentmarket-agent/schemas/: jobspec_v1.json
agentmarket-frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
agentmarket-frontend/app/: globals.css  layout.tsx  page.tsx
agentmarket-frontend/app/agent/: page.tsx
agentmarket-frontend/app/marketplace/: page.tsx
agentmarket-frontend/app/submit/: page.tsx
agentmarket-frontend/components/: AuditCard.tsx  Navbar.tsx  StatusBadge.tsx  WalletButton.tsx  WalletProvider.tsx
agentmarket-frontend/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx
agentmarket-frontend/lib/: anchor.ts  idl.ts  solana.ts
archive/: watcher_bot.py
migrations/: deploy.ts
programs/agentmarket/: Cargo.toml
programs/agentmarket/src/: lib.rs
risc-zero-v2/: Cargo.toml  audit_proof.json  proof_test-job-001_metadata.json
risc-zero-v2/.cargo/: config.toml
risc-zero-v2/guest/: Cargo.toml
risc-zero-v2/guest/src/: main.rs
risc-zero-v2/host/: Cargo.toml  build.rs
risc-zero-v2/host/src/: main.rs
risc-zero-v2/methods/guest/: Cargo.toml
risc-zero-v2/methods/guest/src/: main.rs
risc-zero-v2/shared/: Cargo.toml
risc-zero-v2/shared/src/: checker.rs  lib.rs
tests/: agentmarket.ts
