[workspace]
members = [
    "programs/*"
]
exclude = [
    "risc-zero",
    "risc-zero/host",
    "risc-zero/methods",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
[workspace.dependencies]
risc0-zkvm  = { version = "^3.0.5", default-features = false, features = ["std"] }
risc0-build = { version = "^3.0.5" }
