[package]
name = "agentmarket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentmarket"

[features]
# no-zk: skips the CPI to the RISC Zero VerifierRouter.
# ⚠️  Never activate alone — use the `testing` feature instead.
#     A compile_error in lib.rs blocks any build with no-zk that lacks
#     the `testing` flag, making accidental deployment impossible.
#
# testing: enables no-zk for `anchor test` on localnet.
#     Usage: anchor test --features testing
#     This is the ONLY sanctioned way to activate no-zk.
default = []
no-zk = []
testing = ["no-zk"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
solana-program = "=1.18.26"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
