[package]
name = "agent_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm  = { version = "^3.0.5", default-features = false, features = ["std"] }
sha2        = "0.10"
hex         = "0.4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
agentmarket-audit-shared = { path = "../../shared" }
